--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,16 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.toast-error > div {
+  color: #ff4d4f;
+  background-color: #ffffff;
+}
+.toast-success > div {
+  color: #438c1f;
+  background-color: #ffffff;
+}
+.toast-warning > div {
+  color: #faad14;
+  background-color: #ffffff;
+}
