Email user login is working, displayName updating correctly

--- a/components/auth/EmailSignInForm.module.scss
+++ b/components/auth/EmailSignInForm.module.scss
@@ -23,6 +23,11 @@
   font-size: 0.875rem;
 }
 
+.warning {
+  color: #ac5a08;
+  font-size: 0.875rem;
+}
+
 .success {
   color: green;
   font-size: 0.9rem;
