--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,7 @@ body {
   background-color: #ffffff;
 }
 .toast-warning > div {
-  color: #faad14;
+  color: #ac5a08;
   background-color: #ffffff;
 }
 
